cmake_minimum_required(VERSION 3.2)

PROJECT(luasqlite3)
INCLUDE(cmake/ModuleImport.cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(LUASQLITE3_VERSION_MAJOR "1")
SET(LUASQLITE3_VERSION_MINOR "0")
SET(LUASQLITE3_VERSION_PATCH "1")
SET(LUASQLITE3_VERSION "${LUASQLITE3_VERSION_MAJOR}.${LUASQLITE3_VERSION_MINOR}.${LUASQLITE3_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${LUASQLITE3_VERSION}")

ADD_DEFINITIONS(-DUSE_LUASQLITE3)
ADD_DEFINITIONS(-DLUA_COMPAT_MODULE -DLUA_COMPAT_APIINTCASTS)
OPTION(USE_LUASQLITE3_INNER "use lua inner" ON)
OPTION(USE_LUASQLITE3_TEST "use luasqlite3 test" ON)

#ModuleImport("dmlog" "thirdparty/dmlog")

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/luasqlite3)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

IF (USE_LUASQLITE3_TEST)
    FILE(GLOB DMLUA_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.h
    )

    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

    FILE(GLOB LUA_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/lua.c
    )
ENDIF(USE_LUASQLITE3_TEST)


FILE(GLOB LUASQLITE3_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/luasqlite3/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luasqlite3/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/luasqlite3/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/luasqlite3/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luasqlite3/*.h
)

IF (WIN32)
    LIST(APPEND LUASQLITE3_SOURCES)
ENDIF(WIN32)

FILE(GLOB_RECURSE LUASQLITE3TEST_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/test/*.c
${CMAKE_CURRENT_SOURCE_DIR}/test/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.h)

IF (WIN32)
    IF (USE_LUASQLITE3_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
        
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53)
    ENDIF(USE_LUASQLITE3_INNER)

    ADD_LIBRARY(luasqlite3 SHARED ${LUASQLITE3_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/src/luasqlite3/luasqlite3_module.def)
    TARGET_LINK_LIBRARIES(luasqlite3 lua53)

    SET_TARGET_PROPERTIES(luasqlite3 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_LIB")

    IF (USE_LUASQLITE3_TEST)
        ADD_EXECUTABLE(luasqlite3test ${LUASQLITE3TEST_SOURCES})
        TARGET_LINK_LIBRARIES(luasqlite3test luasqlite3)
        SET_TARGET_PROPERTIES(luasqlite3test PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL")
    ENDIF(USE_LUASQLITE3_TEST)

ELSEIF (APPLE)
    ADD_DEFINITIONS(-DLUA_USE_MACOSX)
    IF (USE_LUASQLITE3_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53 dl)
    ENDIF(USE_LUASQLITE3_INNER)

    ADD_LIBRARY(luasqlite3 SHARED ${LUASQLITE3_SOURCES})
    SET_TARGET_PROPERTIES(luasqlite3 PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")
    TARGET_LINK_LIBRARIES(luasqlite3 lua53)

    IF (USE_LUASQLITE3_TEST)
        ADD_EXECUTABLE(luasqlite3test ${LUASQLITE3TEST_SOURCES})
        TARGET_LINK_LIBRARIES(luasqlite3test luasqlite3)
        SET_TARGET_PROPERTIES(luasqlite3test PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")
    ENDIF(USE_LUASQLITE3_TEST)   
ELSEIF (UNIX)
    ADD_DEFINITIONS(-DLUA_USE_LINUX)

    IF (USE_LUASQLITE3_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-Wl,-E" )
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53 m dl)
    ENDIF(USE_LUASQLITE3_INNER)

    ADD_LIBRARY(luasqlite3 SHARED ${LUASQLITE3_SOURCES})
    SET_TARGET_PROPERTIES(luasqlite3 PROPERTIES COMPILE_FLAGS "-Wl,-E" )
    SET_TARGET_PROPERTIES(luasqlite3 PROPERTIES PREFIX "")
    TARGET_LINK_LIBRARIES(luasqlite3 lua53)
    
    IF (USE_LUASQLITE3_TEST)
        ADD_EXECUTABLE(luasqlite3test ${LUASQLITE3TEST_SOURCES})
        TARGET_LINK_LIBRARIES(luasqlite3test luasqlite3)
    ENDIF(USE_LUASQLITE3_TEST)   
ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET luasqlite3test
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:luasqlite3test>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS luasqlite3
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(LUASQLITE3_LIBS "luasqlite3")
#MARK_AS_ADVANCED(${LUASQLITE3_LIBS})
